--- a/VRChat/89/1335489.html
+++ b/VRChat/89/1335489.html
@@ -3,27 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>
-      VRC向けアバター 「Amelia」 Ver.1.2 - SakuSakuのモデリング工房 - BOOTH
+      VRC想定アバター 「Amelia : Re」 Ver.1.0 - SakuSakuのモデリング工房 - BOOTH
     </title>
-    <meta name="description" content="VRChat想定3Dモデル「Amelia」">
+    <meta name="description" content=
+    "VRChat想定3Dモデル「Amelia」リメイクモデル 感想など　#AmeliaSSS　でつぶやいて頂けると喜びます">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1335489">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "VRC向けアバター 「Amelia」 Ver.1.2 - SakuSakuのモデリング工房 - BOOTH">
+    "VRC想定アバター 「Amelia : Re」 Ver.1.0 - SakuSakuのモデリング工房 - BOOTH">
     <meta name="twitter:description" content=
-    "VRChat想定3Dモデル「Amelia」">
+    "VRChat想定3Dモデル「Amelia」リメイクモデル 感想など　#AmeliaSSS　でつぶやいて頂けると喜びます">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/51387530-0d57-4e3d-aa9a-b31104bb8df1_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/047f7ad7-cb34-4ca3-98ca-b426accdeee3_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "VRC向けアバター 「Amelia」 Ver.1.2 - SakuSakuのモデリング工房 - BOOTH">
+    "VRC想定アバター 「Amelia : Re」 Ver.1.0 - SakuSakuのモデリング工房 - BOOTH">
     <meta property="og:description" content=
-    "VRChat想定3Dモデル「Amelia」">
+    "VRChat想定3Dモデル「Amelia」リメイクモデル 感想など　#AmeliaSSS　でつぶやいて頂けると喜びます">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/51387530-0d57-4e3d-aa9a-b31104bb8df1_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/047f7ad7-cb34-4ca3-98ca-b426accdeee3_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1335489">
     <meta name="ga:shop" content="UA-122994898-1">
@@ -80,7 +81,7 @@
         <div class="market-item-detail u-bg-white"
         data-product-brand="sakusaku-solid" data-product-category=
         "127" data-product-id="1335489" data-product-list=
-        "market_show" data-product-price="5000" data-tracking=
+        "market_show" data-product-price="8000" data-tracking=
         "detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -132,7 +133,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          VRC向けアバター 「Amelia」 Ver.1.2
+                          VRC想定アバター 「Amelia : Re」 Ver.1.0
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -169,7 +170,7 @@
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 5,000
+                                    ¥ 8,000
                                   </div>
                                 </div>
                                 <div class="variation-cart">
@@ -182,7 +183,7 @@
                                       "patch"><button class=
                                       "btn add-cart full-length"
                                       data-product-id="1335489"
-                                      data-product-price="5000"
+                                      data-product-price="8000"
                                       data-product-brand=
                                       "sakusaku-solid"
                                       data-product-category="127"
@@ -199,7 +200,7 @@
                                         <button class=
                                         "btn add-cart full-length"
                                         data-product-id="1335489"
-                                        data-product-price="5000"
+                                        data-product-price="8000"
                                         data-product-brand=
                                         "sakusaku-solid"
                                         data-product-category="127"
@@ -226,7 +227,7 @@
                           "https://booth.pm/ja/items/1335489"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "VRC向けアバター 「Amelia」 Ver.1.2 | SakuSakuのモデリング工房"
+                          "VRC想定アバター 「Amelia : Re」 Ver.1.0 | SakuSakuのモデリング工房"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -246,7 +247,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <iframe width="560" height="315" src=
-                            "https://www.youtube.com/embed/GB1EzaMNPt4"
+                            "https://www.youtube.com/embed/T-mkj1xRtUw"
                             frameborder="0" allowfullscreen
                             ></iframe>
                           </div>
@@ -254,82 +255,51 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="VRC向けアバター 「Amelia」 Ver.1.2"
+                            <img alt=
+                            "VRC想定アバター 「Amelia : Re」 Ver.1.0"
                             class="market-item-detail-item-image"
                             src=
-                            "https://booth.pximg.net/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/51387530-0d57-4e3d-aa9a-b31104bb8df1_base_resized.jpg">
+                            "https://booth.pximg.net/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/047f7ad7-cb34-4ca3-98ca-b426accdeee3_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="VRC向けアバター 「Amelia」 Ver.1.2"
+                            <img alt=
+                            "VRC想定アバター 「Amelia : Re」 Ver.1.0"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/197ad8be-accf-42aa-81b3-34901d598261_base_resized.jpg">
+                            "https://booth.pximg.net/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/92743af6-8cb6-461d-9e4c-f0368d6410f4_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="VRC向けアバター 「Amelia」 Ver.1.2"
+                            <img alt=
+                            "VRC想定アバター 「Amelia : Re」 Ver.1.0"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/4cb6a299-080d-4237-9018-e287b19c7c85_base_resized.jpg">
+                            "https://booth.pximg.net/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/36c0d519-d95d-42bb-a2f5-8b6bdd76f37b_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="VRC向けアバター 「Amelia」 Ver.1.2"
+                            <img alt=
+                            "VRC想定アバター 「Amelia : Re」 Ver.1.0"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/64779c46-bbc7-43e6-bbc9-2eb1d44275b7_base_resized.jpg">
+                            "https://booth.pximg.net/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/9130789e-ca2f-4151-9f61-ad77ee453aa0_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="VRC向けアバター 「Amelia」 Ver.1.2"
+                            <img alt=
+                            "VRC想定アバター 「Amelia : Re」 Ver.1.0"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/5100661e-fee5-42bf-ba7a-1694649d7174_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt="VRC向けアバター 「Amelia」 Ver.1.2"
-                            class="market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/0d606648-43b7-44f8-af48-511f5265f302_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt="VRC向けアバター 「Amelia」 Ver.1.2"
-                            class="market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/83a59a3e-ffe4-4a0b-b44c-e309b8811ece_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt="VRC向けアバター 「Amelia」 Ver.1.2"
-                            class="market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/faf4918f-edd1-4c93-95c7-2d0ac01f89e4_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt="VRC向けアバター 「Amelia」 Ver.1.2"
-                            class="market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/476400c6-483c-4de4-aebb-4eb2ff7c87c4_base_resized.jpg">
+                            "https://booth.pximg.net/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/6061984d-c625-4173-8cf2-edc90224f649_base_resized.jpg">
                           </div>
                         </div>
                       </div>
@@ -340,46 +310,31 @@
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/51387530-0d57-4e3d-aa9a-b31104bb8df1_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/047f7ad7-cb34-4ca3-98ca-b426accdeee3_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/197ad8be-accf-42aa-81b3-34901d598261_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/92743af6-8cb6-461d-9e4c-f0368d6410f4_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/4cb6a299-080d-4237-9018-e287b19c7c85_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/36c0d519-d95d-42bb-a2f5-8b6bdd76f37b_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/64779c46-bbc7-43e6-bbc9-2eb1d44275b7_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/9130789e-ca2f-4151-9f61-ad77ee453aa0_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/5100661e-fee5-42bf-ba7a-1694649d7174_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/0d606648-43b7-44f8-af48-511f5265f302_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/83a59a3e-ffe4-4a0b-b44c-e309b8811ece_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/faf4918f-edd1-4c93-95c7-2d0ac01f89e4_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/476400c6-483c-4de4-aebb-4eb2ff7c87c4_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/3e013b9b-cd22-47e1-abbd-a7ad65b8a1e0/i/1335489/6061984d-c625-4173-8cf2-edc90224f649_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            VRChat想定3Dモデル「Amelia」
+                            VRChat想定3Dモデル「Amelia」リメイクモデル
+                            感想など　#AmeliaSSS　でつぶやいて頂けると喜びます
                           </p>
                         </div>
                       </section>
