--- a/VRChat/99/1035499.html
+++ b/VRChat/99/1035499.html
@@ -289,13 +289,8 @@
                             ・Dataフォルダ(Texture、PSD、blendファイル)
                             ■利用規約について ・再配布不可 ・商用利用不可（例外あり）
                             ・エロ、グロに該当する表現への利用 ・モデル改造可(再配布、商用は不可)
-                            詳細は以下のリンクよりご確認ください。
-                            http://jaaaaam.com/2018/10/16/bakerydress/
+                            詳細は下記よりご確認ください。
                             利用規約についての内容は予告なく変更する場合があります。
-                            -------------------------------------
-                            《連絡先/Contact》 【Twitter】
-                            https://twitter.com/_jam_cg 【Web】
-                            http://jaaaaam.com/
                           </p>
                         </div>
                       </section>
