--- a/VRChat/05/1263105.html
+++ b/VRChat/05/1263105.html
@@ -3,24 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>
-      水仙の髪飾り - 和飾ノ助屋 - BOOTH
+      喇叭水仙の髪飾り - 和飾ノ助屋 - BOOTH
     </title>
     <meta name="description" content=
-    "主にVRchatでの利用を想定した 水仙の髪飾り2色の3Dモデルとなります。 【ポリゴン数】 ･2456 【ファイル内容】 ･FBX ･unitypackage ･改変用psd ･テクスチャ画像 ※テクスチャの両面を描画する為の Unlitシェーダーを同梱､使用しています。 別のシェーダーを使用する際はテクスチャの両面の 描画ができるシェーダーを使用してください。 【利用にあたって】 〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。 〇モデルを改変しての利用は可能です。 〇商用利用はデータそのものを販売しない場合は可能です。 〇動画制作に利用しても大丈夫です。">
+    "主にVRchatでの利用を想定した 喇叭水仙の髪飾り2色の3Dモデルとなります。 【ポリゴン数】 ･2456 【ファイル内容】 ･unitypackage ･改変用psd 【利用にあたって】 〇VRchatへのアップロード 〇アバターペデスタルへの利用 〇モデルを改変しての利用 〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用 ×購入者以外の方がデータを取得出来る状態での利用 ×同梱されているデータそのものの販売 ×再配布(改変の有無問わず禁止) -更新履歴- 2019.3/7 販売開始 2020.2/10 ShaderをUTS2に変更">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1263105">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="水仙の髪飾り - 和飾ノ助屋 - BOOTH">
+    <meta name="twitter:title" content="喇叭水仙の髪飾り - 和飾ノ助屋 - BOOTH">
     <meta name="twitter:description" content=
-    "主にVRchatでの利用を想定した 水仙の髪飾り2色の3Dモデルとなります。 【ポリゴン数】 ･2456 【ファイル内容】 ･FBX ･unitypackage ･改変用psd ･テクスチャ画像 ※テクスチャの両面を描画する為の Unlitシェーダーを同梱､使用しています。 別のシェーダーを使用する際はテクスチャの両面の 描画ができるシェーダーを使用してください。 【利用にあたって】 〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。 〇モデルを改変しての利用は可能です。 〇商用利用はデータそのものを販売しない場合は可能です。 〇動画制作に利用しても大丈夫です。">
+    "主にVRchatでの利用を想定した 喇叭水仙の髪飾り2色の3Dモデルとなります。 【ポリゴン数】 ･2456 【ファイル内容】 ･unitypackage ･改変用psd 【利用にあたって】 〇VRchatへのアップロード 〇アバターペデスタルへの利用 〇モデルを改変しての利用 〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用 ×購入者以外の方がデータを取得出来る状態での利用 ×同梱されているデータそのものの販売 ×再配布(改変の有無問わず禁止) -更新履歴- 2019.3/7 販売開始 2020.2/10 ShaderをUTS2に変更">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1263105/d44a549d-39bf-4557-a0e6-ae6ec406207a_base_resized.jpg">
     <meta property="og:type" content="product">
-    <meta property="og:title" content="水仙の髪飾り - 和飾ノ助屋 - BOOTH">
+    <meta property="og:title" content="喇叭水仙の髪飾り - 和飾ノ助屋 - BOOTH">
     <meta property="og:description" content=
-    "主にVRchatでの利用を想定した 水仙の髪飾り2色の3Dモデルとなります。 【ポリゴン数】 ･2456 【ファイル内容】 ･FBX ･unitypackage ･改変用psd ･テクスチャ画像 ※テクスチャの両面を描画する為の Unlitシェーダーを同梱､使用しています。 別のシェーダーを使用する際はテクスチャの両面の 描画ができるシェーダーを使用してください。 【利用にあたって】 〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。 〇モデルを改変しての利用は可能です。 〇商用利用はデータそのものを販売しない場合は可能です。 〇動画制作に利用しても大丈夫です。">
+    "主にVRchatでの利用を想定した 喇叭水仙の髪飾り2色の3Dモデルとなります。 【ポリゴン数】 ･2456 【ファイル内容】 ･unitypackage ･改変用psd 【利用にあたって】 〇VRchatへのアップロード 〇アバターペデスタルへの利用 〇モデルを改変しての利用 〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用 ×購入者以外の方がデータを取得出来る状態での利用 ×同梱されているデータそのものの販売 ×再配布(改変の有無問わず禁止) -更新履歴- 2019.3/7 販売開始 2020.2/10 ShaderをUTS2に変更">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1263105/d44a549d-39bf-4557-a0e6-ae6ec406207a_base_resized.jpg">
     <meta property="og:url" content=
@@ -112,18 +112,6 @@
                   <div class="u-d-flex">
                     <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class="u-mb-200">
-                          <div class="eventname-flag">
-                            <a class="eventname-flag--inner"
-                            data-tracking="click"
-                            data-product-list="from market_show via eventname_flag to event_index"
-                            href=
-                            "https://booth.pm/ja/events/v-market2">
-                            <div class="eventname-flag__name">
-                              Vケット2
-                            </div></a>
-                          </div>
-                        </div>
                         <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
@@ -142,7 +130,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          水仙の髪飾り
+                          喇叭水仙の髪飾り
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -235,7 +223,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1263105"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="水仙の髪飾り | 和飾ノ助屋" data-count=
+                          data-text="喇叭水仙の髪飾り | 和飾ノ助屋" data-count=
                           "none" class="twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
                           <div class="u-ml-300">
@@ -253,7 +241,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="水仙の髪飾り" class=
+                            <img alt="喇叭水仙の髪飾り" class=
                             "market-item-detail-item-image" src=
                             "https://booth.pximg.net/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1263105/d44a549d-39bf-4557-a0e6-ae6ec406207a_base_resized.jpg">
                           </div>
@@ -261,7 +249,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="水仙の髪飾り" class=
+                            <img alt="喇叭水仙の髪飾り" class=
                             "market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1263105/bfe73662-e6be-4a55-892c-88475541c6cf_base_resized.jpg">
@@ -270,19 +258,10 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="水仙の髪飾り" class=
+                            <img alt="喇叭水仙の髪飾り" class=
                             "market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1263105/0c80e7ba-5cfe-4400-a107-5b5ebd80a9ba_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt="水仙の髪飾り" class=
-                            "market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1263105/3cab8316-c2f2-41e0-9106-70921148391c_base_resized.jpg">
                           </div>
                         </div>
                       </div>
@@ -299,28 +278,22 @@
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1263105/0c80e7ba-5cfe-4400-a107-5b5ebd80a9ba_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1263105/3cab8316-c2f2-41e0-9106-70921148391c_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            主にVRchatでの利用を想定した 水仙の髪飾り2色の3Dモデルとなります。
-                            【ポリゴン数】 ･2456 【ファイル内容】 ･FBX
-                            ･unitypackage ･改変用psd ･テクスチャ画像
-                            ※テクスチャの両面を描画する為の Unlitシェーダーを同梱､使用しています。
-                            別のシェーダーを使用する際はテクスチャの両面の
-                            描画ができるシェーダーを使用してください。 【利用にあたって】
-                            〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。
-                            〇モデルを改変しての利用は可能です。
-                            〇商用利用はデータそのものを販売しない場合は可能です。
-                            〇動画制作に利用しても大丈夫です。 ×購入者以外の方が容易にデータを取り出せる
-                            　状態での利用は改変の有無問わず禁止です。
-                            ×同梱されているデータそのものの販売及び 　再配布は改変の有無問わず禁止です。
+                            主にVRchatでの利用を想定した
+                            喇叭水仙の髪飾り2色の3Dモデルとなります。 【ポリゴン数】 ･2456
+                            【ファイル内容】 ･unitypackage ･改変用psd
+                            【利用にあたって】 〇VRchatへのアップロード
+                            〇アバターペデスタルへの利用 〇モデルを改変しての利用
+                            〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用
+                            ×購入者以外の方がデータを取得出来る状態での利用
+                            ×同梱されているデータそのものの販売 ×再配布(改変の有無問わず禁止)
+                            -更新履歴- 2019.3/7 販売開始 2020.2/10
+                            ShaderをUTS2に変更
                             -------------------------------------------------
                             質問･不具合などあればご一報ください。
                             【Twitter】https://twitter.com/Sdnsk
