--- a/VRChat/43/1051943.html
+++ b/VRChat/43/1051943.html
@@ -6,7 +6,7 @@
       《Ver.6.0》シャムシールHW（3Dキャラクターモデル） - 缶詰茶房 物販コーナー - BOOTH
     </title>
     <meta name="description" content=
-    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【説明書】 https://docs.google.com/document/d/10n9Vu5Jn6J0tdMiIHKese-cyFshzBuOZkFVhMCDPX7s/edit?usp=sharing ＝＝＝check！！＝＝＝ 【注意事項】 仕様上、購入後の返金には対応していません。利用規約と説明書を読み、よく考えてからご購入下さい。">
+    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【『PMX版』利用規約】 https://docs.google.com/document/d/12R4WrpVyV9WPBQMeI7CTE7KC1-5-GMjUJ_CiMkxnsiA/edit?usp=sharing 【説明書】">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1051943">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "《Ver.6.0》シャムシールHW（3Dキャラクターモデル） - 缶詰茶房 物販コーナー - BOOTH">
     <meta name="twitter:description" content=
-    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【説明書】 https://docs.google.com/document/d/10n9Vu5Jn6J0tdMiIHKese-cyFshzBuOZkFVhMCDPX7s/edit?usp=sharing ＝＝＝check！！＝＝＝ 【注意事項】 仕様上、購入後の返金には対応していません。利用規約と説明書を読み、よく考えてからご購入下さい。">
+    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【『PMX版』利用規約】 https://docs.google.com/document/d/12R4WrpVyV9WPBQMeI7CTE7KC1-5-GMjUJ_CiMkxnsiA/edit?usp=sharing 【説明書】">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/66e44db3-1e70-427e-ba0c-5d35f8af2b12/i/1051943/06295a62-42a8-4188-8f0f-d6815c91ce14_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "《Ver.6.0》シャムシールHW（3Dキャラクターモデル） - 缶詰茶房 物販コーナー - BOOTH">
     <meta property="og:description" content=
-    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【説明書】 https://docs.google.com/document/d/10n9Vu5Jn6J0tdMiIHKese-cyFshzBuOZkFVhMCDPX7s/edit?usp=sharing ＝＝＝check！！＝＝＝ 【注意事項】 仕様上、購入後の返金には対応していません。利用規約と説明書を読み、よく考えてからご購入下さい。">
+    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【『PMX版』利用規約】 https://docs.google.com/document/d/12R4WrpVyV9WPBQMeI7CTE7KC1-5-GMjUJ_CiMkxnsiA/edit?usp=sharing 【説明書】">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/66e44db3-1e70-427e-ba0c-5d35f8af2b12/i/1051943/06295a62-42a8-4188-8f0f-d6815c91ce14_base_resized.jpg">
     <meta property="og:url" content=
@@ -216,6 +216,26 @@
                                       <div>
                                         &nbsp;(14.1 MB)
                                       </div>
+                                    </div></a><a class=
+                                    "btn add-cart full-length"
+                                    title="ShamHW_PMX.zip" href=
+                                    "https://booth.pm/downloadables/897340">
+                                    <div class="u-d-block">
+                                      <span class=
+                                      "cmd-label">無料ダウンロード</span>
+                                    </div>
+                                    <div class=
+                                    "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
+                                      <div class=
+                                      "u-text-ellipsis u-max-w-50">
+                                        ShamHW_PMX
+                                      </div>
+                                      <div>
+                                        .zip
+                                      </div>
+                                      <div>
+                                        &nbsp;(248 KB)
+                                      </div>
                                     </div></a>
                                   </div>
                                 </div>
@@ -390,6 +410,8 @@
                           <p class="autolink u-text-wrap">
                             ＝＝＝check！！＝＝＝ 【利用規約】
                             https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing
+                            【『PMX版』利用規約】
+                            https://docs.google.com/document/d/12R4WrpVyV9WPBQMeI7CTE7KC1-5-GMjUJ_CiMkxnsiA/edit?usp=sharing
                             【説明書】
                             https://docs.google.com/document/d/10n9Vu5Jn6J0tdMiIHKese-cyFshzBuOZkFVhMCDPX7s/edit?usp=sharing
                             ＝＝＝check！！＝＝＝ 【注意事項】
