--- a/VRChat/08/1334508.html
+++ b/VRChat/08/1334508.html
@@ -6,7 +6,7 @@
       ゆめかわブルゾン - 黒猫洋品店 - BOOTH
     </title>
     <meta name="description" content=
-    "■ご利用方法 使いたいアバターのProjectに当unitypackageをインポート。 PrefabをヒエラルキーにD&amp;Dしサイズと位置を合わせてアバターのArmatureのボーン下にそれぞれ入れて下さい。 ※必ずバックアップを取ってから作業して下さい。 着せ替えについての参考：http://ygr.jpn.org/index.php?%E7%9D%80%E3%81%9B%E6%9B%BF%E3%81%88 ■詳細 ポリゴン数（三角面）：9968 シェーダー：UTS2.0.7を同梱、設定してあります。 ■利用に際して 許可 ○改造や改変">
+    "■ご利用方法 使いたいアバターのProjectに当unitypackageをインポート。 PrefabをヒエラルキーにD&amp;Dしサイズと位置を合わせてアバターのArmatureのボーン下にそれぞれ入れて下さい。 ※必ずバックアップを取ってから作業して下さい。 ■詳細 ポリゴン数（三角面）：9968 シェーダー：UTS2.0.7を同梱、設定してあります。 ■利用に際して 許可 ○改造や改変 ○VRM化、その他VRMソフトでの個人利用（誰でも使用可能はNGです） ○収益化動画への写り込み ○モデルを利用したVtuber活動 ○unityで制作するゲームに使用できます。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1334508">
@@ -14,13 +14,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="ゆめかわブルゾン - 黒猫洋品店 - BOOTH">
     <meta name="twitter:description" content=
-    "■ご利用方法 使いたいアバターのProjectに当unitypackageをインポート。 PrefabをヒエラルキーにD&amp;Dしサイズと位置を合わせてアバターのArmatureのボーン下にそれぞれ入れて下さい。 ※必ずバックアップを取ってから作業して下さい。 着せ替えについての参考：http://ygr.jpn.org/index.php?%E7%9D%80%E3%81%9B%E6%9B%BF%E3%81%88 ■詳細 ポリゴン数（三角面）：9968 シェーダー：UTS2.0.7を同梱、設定してあります。 ■利用に際して 許可 ○改造や改変">
+    "■ご利用方法 使いたいアバターのProjectに当unitypackageをインポート。 PrefabをヒエラルキーにD&amp;Dしサイズと位置を合わせてアバターのArmatureのボーン下にそれぞれ入れて下さい。 ※必ずバックアップを取ってから作業して下さい。 ■詳細 ポリゴン数（三角面）：9968 シェーダー：UTS2.0.7を同梱、設定してあります。 ■利用に際して 許可 ○改造や改変 ○VRM化、その他VRMソフトでの個人利用（誰でも使用可能はNGです） ○収益化動画への写り込み ○モデルを利用したVtuber活動 ○unityで制作するゲームに使用できます。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/3101f45b-b262-485c-a1a1-3d2a8da33466/i/1334508/56cc613d-67eb-48ce-95cb-c1d4767a7c69_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content="ゆめかわブルゾン - 黒猫洋品店 - BOOTH">
     <meta property="og:description" content=
-    "■ご利用方法 使いたいアバターのProjectに当unitypackageをインポート。 PrefabをヒエラルキーにD&amp;Dしサイズと位置を合わせてアバターのArmatureのボーン下にそれぞれ入れて下さい。 ※必ずバックアップを取ってから作業して下さい。 着せ替えについての参考：http://ygr.jpn.org/index.php?%E7%9D%80%E3%81%9B%E6%9B%BF%E3%81%88 ■詳細 ポリゴン数（三角面）：9968 シェーダー：UTS2.0.7を同梱、設定してあります。 ■利用に際して 許可 ○改造や改変">
+    "■ご利用方法 使いたいアバターのProjectに当unitypackageをインポート。 PrefabをヒエラルキーにD&amp;Dしサイズと位置を合わせてアバターのArmatureのボーン下にそれぞれ入れて下さい。 ※必ずバックアップを取ってから作業して下さい。 ■詳細 ポリゴン数（三角面）：9968 シェーダー：UTS2.0.7を同梱、設定してあります。 ■利用に際して 許可 ○改造や改変 ○VRM化、その他VRMソフトでの個人利用（誰でも使用可能はNGです） ○収益化動画への写り込み ○モデルを利用したVtuber活動 ○unityで制作するゲームに使用できます。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/3101f45b-b262-485c-a1a1-3d2a8da33466/i/1334508/56cc613d-67eb-48ce-95cb-c1d4767a7c69_base_resized.jpg">
     <meta property="og:url" content=
@@ -286,9 +286,8 @@
                             ■ご利用方法
                             使いたいアバターのProjectに当unitypackageをインポート。
                             PrefabをヒエラルキーにD&amp;Dしサイズと位置を合わせてアバターのArmatureのボーン下にそれぞれ入れて下さい。
-                            ※必ずバックアップを取ってから作業して下さい。
-                            着せ替えについての参考：http://ygr.jpn.org/index.php?%E7%9D%80%E3%81%9B%E6%9B%BF%E3%81%88
-                            ■詳細 ポリゴン数（三角面）：9968
+                            ※必ずバックアップを取ってから作業して下さい。 ■詳細
+                            ポリゴン数（三角面）：9968
                             シェーダー：UTS2.0.7を同梱、設定してあります。 ■利用に際して 許可
                             ○改造や改変
                             ○VRM化、その他VRMソフトでの個人利用（誰でも使用可能はNGです）
